attached_assets/Pasted-root-srv1164256-usr-src-mod-amd-cd-usr-src-mod-amd-sed-_1772683740245.txt
root@srv1164256:/usr/src/mod_amd# cd /usr/src/mod_amd
sed -i 's/-Werror//g' Makefile
root@srv1164256:/usr/src/mod_amd# 
root@srv1164256:/usr/src/mod_amd# 
root@srv1164256:/usr/src/mod_amd# 
root@srv1164256:/usr/src/mod_amd# # 2. Aggiungi la funzione mancante amd_stop_function nel file C
sed -i '/static switch_status_t amd_start_function/i \
SWITCH_STANDARD_APP(amd_stop_function)\n{\n\tswitch_channel_t *channel = switch_core_session_get_channel(session);\n\tswitch_channel_set_private(channel, "amd", NULL);\n}\n' mod_amd.c
root@srv1164256:/usr/src/mod_amd# 
root@srv1164256:/usr/src/mod_amd# 
root@srv1164256:/usr/src/mod_amd# 
root@srv1164256:/usr/src/mod_amd# # 3. Fix cast const (session → non-const)
sed -i 's/vad->session/(switch_core_session_t*)vad->session/g' mod_amd.c
root@srv1164256:/usr/src/mod_amd# 
root@srv1164256:/usr/src/mod_amd# 
root@srv1164256:/usr/src/mod_amd# 
root@srv1164256:/usr/src/mod_amd# make clean
rm -f mod_amd.so mod_amd.o
root@srv1164256:/usr/src/mod_amd# make
In file included from /usr/local/freeswitch/include/freeswitch/switch.h:121,
                 from mod_amd.c:1:
mod_amd.c: In function 'mod_amd_load':
mod_amd.c:131:17: error: 'amd_stop_function' undeclared (first use in this function); did you mean 'amd_start_function'?
  131 |                 amd_stop_function,
      |                 ^~~~~~~~~~~~~~~~~
/usr/local/freeswitch/include/freeswitch/switch_loadable_module.h:397:41: note: in definition of macro 'SWITCH_ADD_APP'
  397 |         app_int->application_function = funcptr; \
      |                                         ^~~~~~~
mod_amd.c:131:17: note: each undeclared identifier is reported only once for each function it appears in
  131 |                 amd_stop_function,
      |                 ^~~~~~~~~~~~~~~~~
/usr/local/freeswitch/include/freeswitch/switch_loadable_module.h:397:41: note: in definition of macro 'SWITCH_ADD_APP'
  397 |         app_int->application_function = funcptr; \
      |                                         ^~~~~~~
make: *** [Makefile:17: mod_amd.o] Error 1
root@srv1164256:/usr/src/mod_amd# 